--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -585,27 +585,27 @@ header {
 
 
 
-/* Projects Style */
+/* photograph Style */
 
-#projects {
+#photograph {
   padding-left: 60px;
   padding-right: 60px;
   padding-bottom: 50px;
 }
 
-#projects .masonry {
+#photograph .masonry {
   position: relative;
   width: 100%;
 }
 
-#projects .masonry .item img {
+#photograph .masonry .item img {
   transition: all 1s;
   width: 100%;
   overflow: hidden;
   margin-bottom: 30px;
 }
 
-#projects .masonry .item img:hover {
+#photograph .masonry .item img:hover {
   opacity: 0.5;
 }
 
@@ -1032,7 +1032,7 @@ header {
     right: 0;
   }
 
-  #projects {
+  #photograph {
     padding-left: 15px;
     padding-right: 15px;
   }
